syntax = "proto3";

package org.junnikym;

option java_multiple_files = true;
option java_outer_classname = "HelloGrpc";

service SampleService {
  rpc hello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}